--- a/src/commonStyle.scss/styles.scss
+++ b/src/commonStyle.scss/styles.scss
@@ -1,4 +1,18 @@
 @import 'mixins',
-'reset',
-'container',
 'fonts';
+
+svg {
+    display: block;
+}
+button {
+    cursor: pointer;
+    background-color: transparent;
+    border: none;
+}
+ul{
+    list-style: none;
+
+}
+a {
+    text-decoration: none;
+}
