--- a/src/components/header/header.module.scss
+++ b/src/components/header/header.module.scss
@@ -2,6 +2,11 @@
 @import './header_list.module.scss';
 @import './burger-menu.module.scss';
 
+
+.container {
+        padding: 30px  138px;
+        margin: 0 auto;
+}
 .header {
     position: absolute;
     width: 100%;
